objects/Employee__c/fields/College__c.field-meta.xml
<CustomField>
    <fullName>College__c</fullName>
    <label>College</label>
    <length>5</length>
    <type>Text</type>
</CustomField>