objects/Employee__c/fields/Skillset__c.field-meta.xml
<CustomField>
    <fullName>Skillset__c</fullName>
    <label>Skillset</label>
    <length>4</length>
    <type>Text</type>
</CustomField>